ChangeLog for 2.53.1

//Beta 33
Quest [METADATA] is now shown in the console, and I added
	logging for older formats (back to 1.80) along with build, gamma,
	and beta metadata, as much as possible with known variables and the
	available source allows.
Added zprint2(). This ALWAYS prints, with no regard to log level settings, to
	be used for critical metadata displays and special system messages
	such as holiday greetings (e.g. terminal motd).
Added colour console andzprint to Zuest to matchh 2.55.
Added byte __isZQuest to both programmes.
	If the editor is running, it has a value of 1, otherwise 0, so that
	shared functionscan reference this to know which of the two components
	is calling the function.
	( ZoriaRPG, 15th February, 2020 )

//Beta 32
Added Link->Eaten, backported from 2.55.
Init Bwpn andAwpn to 0 on start and on game select.
Added sanity bounds and error logging to Screen->Combo*[pos].
	Assigning an illegal alue, or accessing an inalid
	index will now generate errors instead of crashing ZC.
	( ZoriaRPG, 12th February, 2020 )
	
//Beta 31
Probably fixed clash between tile warp and warp ring dialogues. 
	( ZoriaRPG, 6th February, 2020 )

//Beta 30
Added fire/animation to the new AGN logo. It's done. Please...No more.
	( ZoriaRPG, 4th February, 2020 )

//Beta 29
Added new splash logo theme, by stk13, resequenced into a shorter loop.
	( ZoriaRPG, 4th February, 2020 )
	
Packaged nom-UPD'd bins; added UPX'd bins to ./upx
Fixed title screen copyright years. They are now automated at compilation.
Added new AGN Splash Screen and Audio
	( ZoriaRPG, 3rd February, 2020 )

//Beta 28
Fixed vine tiles in story scroll; updated qst.dat.
	( ZoriaRPG, 1st February, 2020 )

//Beta 27
Disabled a trace on dustpile creation.
	( ZoriaRPG, 30th January, 2020 )
	
All roomtypes now allow a 'Generic Catchall' set via the menus.
	( ZoriaRPG, 27th January, 2020 )

//Beta 26
The Item 2 and Item 3 counters of subscreen objects are intended